--- a/wangyiyun/pom.xml
+++ b/wangyiyun/pom.xml
@@ -107,6 +107,12 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.1</version>
         </dependency>
+		<!--word分词-->
+		<dependency>
+			<groupId>org.apdplat</groupId>
+			<artifactId>word</artifactId>
+			<version>1.3</version>
+		</dependency>
     </dependencies>
 
 	<build>
